--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+  box-sizing: border-box;
+  font-family:Arial, Helvetica, sans-serif
+}
+
+html{
+  font-size:16px;
+}
+
+html,
+button{
+  font-family: "Quicksand", "sans-serif";
+}
+
+body{
+  margin: 0;
+}
+
+a{
+  text-decoration: none;
+}
