--- a/frontend/src/app/components/pages/product-page/product-page.component.css
+++ b/frontend/src/app/components/pages/product-page/product-page.component.css
@@ -73,7 +73,7 @@ img{
   margin: 0.2rem 0.15rem;
   border-radius: 10rem;
   font-weight: 600;
-  color: blue;
+  color: rgb(63, 151, 184);
 }
 
 .cook-time{
@@ -99,7 +99,7 @@ img{
 
 button{
   color: white;
-  background: #e72929;
+  background: rgb(63, 151, 184);
   border: none;
   font-size: 1.2rem;
   padding: 1rem;
