--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,1 +1,49 @@
-<p>cart-page works!</p>
+<div class="wrapper">
+<app-title title="Your Cart" margin="1.5rem 0 0 2.5rem"></app-title>
+
+
+</div>
+<div *ngIf="cart && cart.items.length" class="container">
+  <ul>
+    <li *ngFor="let cartItem of cart.items">
+      <div>
+        <img [src]="cartItem.product.imageUrl" [alt]="cartItem.product.name" />
+      </div>
+      <div>
+        <a routerLink="/product/{{ cartItem.product.id }}">
+          {{ cartItem.product.name }}
+        </a>
+      </div>
+      <div>
+        <select
+          #quantitySelect
+          [value]="cartItem.quantity"
+          (change)="changeQuantity(cartItem, quantitySelect.value)"
+        >
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+      <div>
+        {{ cartItem.price | currency : "EUR" }}
+      </div>
+
+      <div>
+        <button class="remove-button" (click)="removeFromCart(cartItem)">
+          Remove
+        </button>
+      </div>
+    </li>
+  </ul>
+  <div class="checkout">
+    <div>
+      <div class="products-count">{{ cart.totalCount }}</div>
+      <div class="total-price">{{ cart.totalPrice | currency : "EUR" }}</div>
+    </div>
+
+    <a routerLink="/checkout">Proceed to Checkout</a>
+  </div>
+</div>
