--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -1,35 +1,37 @@
 <app-search />
 <app-tags />
+<app-not-found [visible]="!products || !products.length" resetLinkText="Reset Search" />
 
-<ul>
-  <li *ngFor="let product of products">
-    <div class="card">
-      <a  routerLink="/product/{{ product.id }}">
-        <img [src]="product.imageUrl" alt="{{ product.name }}" />
-        <div class="content">
-          <div class="name">
-            {{ product.name }}
-          </div>
-          <span class="favorite {{ product.favorite ? '' : 'not' }}"> ❤ </span>
-          <div class="stars"></div>
-          <div class="product-item-footer">
-            <div class="origins">
-              <span *ngFor="let origin of product.origins">
-                {{ origin }}
-              </span>
+
+  <ul>
+    <li *ngFor="let product of products">
+      <div class="card">
+        <a routerLink="/product/{{ product.id }}">
+          <img [src]="product.imageUrl" alt="{{ product.name }}" />
+          <div class="content">
+            <div class="name">
+              {{ product.name }}
+            </div>
+            <span class="favorite {{ product.favorite ? '' : 'not' }}">
+              ❤
+            </span>
+            <div class="stars"></div>
+            <div class="product-item-footer">
+              <div class="origins">
+                <span *ngFor="let origin of product.origins">
+                  {{ origin }}
+                </span>
+              </div>
             </div>
           </div>
-       
+        </a>
+        <div class="price">
+          <span>
+            {{ product.price | currency : "EUR" }}
+          </span>
+          <button class="add-btn" (click)="addToCart(product)">Buy</button>
         </div>
-      </a>
-      <div class="price">
-        <span>
-          {{ product.price | currency : "EUR" }}
-        </span>
-        <button class="add-btn" (click)="addToCart(product)">Buy</button>
       </div>
+    </li>
+  </ul>
 
-    </div>
-    
-  </li>
-</ul>
