HttpClient implemented && product service updated

--- a/frontend/src/app/components/pages/product-page/product-page.component.html
+++ b/frontend/src/app/components/pages/product-page/product-page.component.html
@@ -1,10 +1,10 @@
 <app-not-found
-  [visible]="!product.id"
+  [visible]="!product?.id"
   notFoundMessage="Product Not Found"
   resetLinkText="Back To Home"
 />
 
-<div *ngIf="product.id" class="container">
+<div *ngIf="product?.id" class="container">
   <img [src]="product.imageUrl" [alt]="product.name" />
 
   <div class="details">
