--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -7,7 +7,7 @@ header{
     left: 0;
     z-index: 1;
   }
-  
+
   a{
     color:  rgb(14, 141, 186);
   }
@@ -28,7 +28,7 @@ header{
   
   a.logo{
     font-weight: bold;
-    padding: 1rem;
+    padding: 1.5rem;
   }
   
   ul{
@@ -36,6 +36,7 @@ header{
     align-items: center;
     list-style-type: none;
     margin: 0;
+    padding: 0;
   }
   
   ul a{
@@ -53,6 +54,7 @@ header{
 
   .dashboard span {
     font-size: 15px;
+    margin-left: 5px;
   }
 
   .custom-icon {
@@ -80,6 +82,10 @@ header{
   
   .menu-container{
     position: relative;
+  }
+
+  .menu-container a{
+    padding: 1.3rem;
   }
   
   .menu{
