--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -1,31 +1,22 @@
 <div class="container">
-    <div class="details">
-        <app-title title="Login"></app-title>
-        <form [formGroup]="loginForm" (ngSubmit)="submit()">
-           <div class="input-container">
-            <label>Email</label>
-            <div>
-                <input type="email" placeholder="Email" formControlName="email"/>
-            </div>
-            <div class="error-list" *ngIf="fc.email.errors && isSubmitted">
-                <div *ngIf="fc.email.errors.required">Should not be empty</div>
-                <div *ngIf="fc.email.errors.email">Email is not valid</div>
-            </div>
-           </div>
+  <div class="details">
+    <app-title title="Login"></app-title>
+    <form [formGroup]="loginForm" (ngSubmit)="submit()">
+      <app-text-input
+        [control]="fc.email"
+        [showErrorsWhen]="isSubmitted"
+        type="email"
+        label="Email"
+      ></app-text-input>
 
-           <div class="input-container">
-            <label>Password</label>
-            <div>
-                <input type="password" placeholder="Password" formControlName="password"/>
-            </div>
-            <div class="error-list" *ngIf="fc.password.errors && isSubmitted">
-                <div *ngIf="fc.password.errors.required">Should not be empty</div>
-            </div>
-           </div>
+      <app-text-input
+        [control]="fc.password"
+        [showErrorsWhen]="isSubmitted"
+        type="password"
+        label="Password"
+      ></app-text-input>
 
-           <div class="button">
-            <button type="submit">Login</button>
-           </div>
-        </form>
-    </div>
+     <app-button text="Login"></app-button>
+    </form>
+  </div>
 </div>
