--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -1,5 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 header{
     width: 100%;
+    display: flex;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.96);
     box-shadow: 0 0 8px rgb(185, 185, 185);
     position: fixed;
@@ -9,6 +16,8 @@ header{
   }
 
   a{
+    height: 60px;
+    padding: 1.3rem;
     color:  rgb(14, 141, 186);
   }
   
@@ -28,21 +37,24 @@ header{
   
   a.logo{
     font-weight: bold;
-    padding: 1.5rem;
+   /* padding: 1.5rem;*/
   }
   
   ul{
     display: flex;
     align-items: center;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+  }
+
+  li{
+    height: 100%;
   }
   
   ul a{
-    padding: 1rem;
     display: inline-block;
   }
+
+
 
   .dashboard {
     width: 100%;
@@ -58,15 +70,17 @@ header{
   }
 
   .custom-icon {
-   margin-top: 5px;
+   padding: 0;
+   
   }
-
+ 
   .cart-btn {
-    border: transparent;
+    border: none;
     outline: none;
     background-color: transparent;
     color: rgb(14, 141, 186);
     position: relative;
+   
   }
   
   .counter {
@@ -85,7 +99,7 @@ header{
   }
 
   .menu-container a{
-    padding: 1.3rem;
+   /* padding: 1.3rem;*/
   }
   
   .menu{
@@ -103,7 +117,7 @@ header{
     width: 100%;
     min-width:8rem;
   }
-  
+
 
   @media screen and (max-width: 990px) {
   
