--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,13 +4,13 @@
     <nav>
       <ul>
         <li *ngIf="!isAuth">
-          <a routerLink="/login">Login</a>
+          <a class="login-link" routerLink="/login">Login</a>
         </li>
         <li *ngIf="isAuth" class="menu-container">
           <a routerLink="/dashboard">
             <div class="dashboard">
-              <mat-icon >person</mat-icon>
-              <span>{{user.name}}</span>
+              <mat-icon>person</mat-icon>
+              <span>{{ user.name }}</span>
             </div>
           </a>
           <div class="menu">
@@ -20,12 +20,10 @@
           </div>
         </li>
         <li>
-       
-            <a class="cart-btn" routerLink="/cart-page">
-              <mat-icon class="custom-icon">shopping_cart</mat-icon>
-              <span class="counter" *ngIf="cartQuantity">{{cartQuantity}}</span>
-            </a>
-         
+          <a class="cart-btn" routerLink="/cart-page">
+            <mat-icon class="custom-icon">shopping_cart</mat-icon>
+            <span class="counter" *ngIf="cartQuantity">{{ cartQuantity }}</span>
+          </a>
         </li>
       </ul>
     </nav>
