register user done

--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -16,7 +16,14 @@
         label="Password"
       ></app-text-input>
 
-     <app-button text="Login"></app-button>
+      <app-button text="Login"></app-button>
+
+      <div class="register">
+        No account? &nbsp;
+        <a routerLink="/register" [queryParams]="{ returnUrl: returnUrl }">
+          Register here
+        </a>
+      </div>
     </form>
   </div>
 </div>
