--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -10,7 +10,7 @@
           <a routerLink="/dashboard">
             <div class="dashboard">
               <mat-icon>person</mat-icon>
-              <span>{{ user.name }}</span>
+              <span>{{capitalizedName }}</span>
             </div>
           </a>
           <div class="menu">
