--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -32,6 +32,7 @@ ul{
   
   .content{
     margin-top: 0.3rem;
+    margin-bottom: .5rem;
     padding: 0.5rem 1rem;
     position: relative;
     height: 2.7rem;
@@ -73,11 +74,7 @@ ul{
     margin-top: 0.2rem;
   }
 
-  .price-wrapper {
-    position:absolute;
-    bottom: 0;
-    left: 0.9rem;
-  }
+
   
   .price{
     height: 50px;
@@ -88,15 +85,17 @@ ul{
     font-size: 1.1rem;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+
   }
   
   .add-btn {
     width: 4rem;
     padding: 10px;
     border-radius: 5px;
-    margin-top: 10px;
     background-color:  rgb(63, 151, 184);
     color: white;
     border: none;
+    cursor: pointer;
   }
+
