map && authGuard  added to the checkout page

--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -10,7 +10,8 @@
     <div class="map">
       <app-title
       title="Choose Your Address On Map"
-      fontSize="1.6rem"></app-title>
+      fontSize="1.6rem" />
+      <app-map [order]="order"/>
     </div>
     <div class="buttons-container">
       <div class="buttons">
