paypal payment implemented

--- a/frontend/src/app/components/pages/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.html
@@ -21,6 +21,7 @@
     </div>
     <div class="buttons-container">
       <div class="buttons">
+        <app-paypal-button [order]="order"/>
        
       </div>
     </div>
