--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -3,7 +3,7 @@
 <app-not-found
   [visible]="!cart || !cart.items.length"
   notFoundMessage="Your Cart is empty."
-  resetLinkText="Back to Home"
+  resetLinkText="Back to Store"
  />
 
 
@@ -11,7 +11,7 @@
 <div *ngIf="cart && cart.items.length" class="container">
   <ul>
     <li *ngFor="let cartItem of cart.items">
-      <div>
+      <div routerLink="/product/{{ cartItem.product.id }}">
         <img [src]="cartItem.product.imageUrl" [alt]="cartItem.product.name" />
       </div>
       <div>
@@ -38,7 +38,7 @@
 
       <div>
         <button class="remove-button" (click)="removeFromCart(cartItem)">
-          Remove
+          <mat-icon>delete_forever</mat-icon>
         </button>
       </div>
     </li>
