--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -69,6 +69,12 @@ header{
     margin-left: 5px;
   }
 
+  .dashboard img {
+    width: 30px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
   .custom-icon {
    padding: 0;
    
