--- a/frontend/src/app/components/partials/text-input/text-input.component.css
+++ b/frontend/src/app/components/partials/text-input/text-input.component.css
@@ -4,9 +4,10 @@ input {
     border: none;
     border-bottom: 0 solid grey;
     transition: border-bottom 0.15s ease-out;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.096);
     font-size: 1.1rem;
     outline: none;
+    z-index: 1;
   }
   
   input::placeholder{
