--- a/frontend/src/app/components/partials/text-input/text-input.component.html
+++ b/frontend/src/app/components/partials/text-input/text-input.component.html
@@ -1,7 +1,13 @@
 <app-input-container [label]="label">
-    <input [type]="type" [placeholder]="label" [formControl]="formControl"/>
-    <app-input-validation
-        [control]="control"
-        [showErrorsWhen]="showErrorsWhen"
-    ></app-input-validation>
+  <input
+    [type]="type"
+    [value]="value"
+    [placeholder]="label"
+    [formControl]="formControl"
+  />
+  <app-input-validation
+    [control]="control"
+    [showErrorsWhen]="showErrorsWhen"
+  ></app-input-validation>
+
 </app-input-container>
