favourite products and star rating working

--- a/frontend/src/app/components/pages/cart-page/cart-page.component.css
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.css
@@ -23,6 +23,7 @@
     list-style: none;
     margin: 0.5rem;
     padding: 0;
+    max-width: 800px;
     
   }
   
@@ -32,6 +33,7 @@
     align-items: center;
     flex-wrap: wrap;
     border-bottom: 1px solid #e4e4e4;
+    padding: 1rem;
   }
   
   ul li:last-child{
@@ -46,7 +48,7 @@
   }
   
   li div{
-    padding: 1rem;
+    padding: 0rem;
   }
 
   li div img {
@@ -141,17 +143,30 @@
 
   @media screen and (max-width: 990px) {
     .wrapper {
-      width: 80%;
+      width: 100%;
     }
     .container {
-      width: 90%;
+      width: 80%;
       flex-direction: column;
       align-items: center;
       
 
     }
+
     ul{
       width: 100%;
     }
+
    
+    .checkout  {
+      width: 300px;
+    }
+   
+  }
+
+  @media screen and (max-width: 440px) {
+    ul li {
+      flex-direction: column;
+      gap: 5px;
+    }
   }
