--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
@@ -28,7 +28,7 @@
   
   .buttons{
     margin: 2rem;
-    width: 35rem;
+    width: 35rem;   
   }
   
   button{
@@ -47,3 +47,18 @@
     cursor: pointer;
   }
   
+  @media screen and (max-width: 760px) {
+    .content{
+      margin: 0 auto;
+      width: 100%;
+    }
+    .buttons {
+      width: 400px;
+    }
+  }
+ 
+  @media screen and (max-width: 440px) {
+    .buttons-container {
+      width: 300px;
+    }
+  }
