--- a/frontend/src/app/components/partials/search/search.component.html
+++ b/frontend/src/app/components/partials/search/search.component.html
@@ -1,7 +1,13 @@
 <div class="search-container">
-    <input #s type="text" placeholder="Search Web Store!"
-     (keyup.enter)="search(s.value)"
-     [value]="searchTerm" />
-    <button (click)="search(s.value)">Search</button>
-  </div>
-  
+  <input
+    #s
+    type="text"
+    placeholder="Search Web Store!"
+    (keyup.enter)="search(s.value)"
+    [value]="searchTerm"
+  />
+
+  <button (click)="search(s.value)">
+    <mat-icon>search</mat-icon>
+  </button>
+</div>
