--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-<app-title title="Your Cart" margin="1.5rem 0 0 2.5rem" />
+<app-title title="{{user.name}}'s Cart" margin="1.5rem 0 0 2.5rem" />
 <app-not-found
   [visible]="!cart || !cart.items.length"
   notFoundMessage="Your Cart is empty."
