--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -1,52 +1,56 @@
-<app-search />
-<app-tags />
-<app-not-found
-  [visible]="!products || !products.length"
-  resetLinkText="Reset Search"
-/>
-
-<ul>
-  <li *ngFor="let product of products">
-    <div class="card">
-      <a routerLink="/product/{{ product.id }}">
-        <img [src]="product.imageUrl" alt="{{ product.name }}" />
-      </a>
-      <div class="content">
-        <a routerLink="/product/{{ product.id }}" class="name">
-          <span>
-            {{ product.name }}
-          </span>
+<div class="wrapper">
+  <div class="aside">
+    <app-search />
+    <app-tags (showCategory)="onShowCategory($event)" />
+  </div>
+  
+  <app-not-found
+    [visible]="!products || !products.length"
+    resetLinkText="Reset Search"
+  />
+  
+  <ul>
+    <li *ngFor="let product of products">
+      <div class="card">
+        <a routerLink="/product/{{ product.id }}">
+          <img [src]="product.imageUrl" alt="{{ product.name }}" />
         </a>
-
-        <span
-          class="favorite {{ product.favorite ? '' : 'not' }}"
-          (click)="toggleFavourite(product)"
-        >
-          ❤
-        </span>
-        <div class="stars">
-          <app-star-rating
-            [averageRating]="product.averageRating"
-            [productId]="product.id"
-          ></app-star-rating>
-        </div>
-        <div class="product-item-footer">
-          <div class="origins">
-            <span *ngFor="let origin of product.origins">
-              {{ origin }}
+        <div class="content">
+          <a routerLink="/product/{{ product.id }}" class="name">
+            <span>
+              {{ product.name }}
             </span>
+          </a>
+  
+          <span
+            class="favorite {{ product.favorite ? '' : 'not' }}"
+            (click)="toggleFavourite(product)"
+          >
+            ❤
+          </span>
+          <div class="stars">
+            <app-star-rating
+              [averageRating]="product.averageRating"
+              [productId]="product.id"
+            ></app-star-rating>
+          </div>
+          <div class="product-item-footer">
+            <div class="origins">
+              <span *ngFor="let origin of product.origins">
+                {{ origin }}
+              </span>
+            </div>
           </div>
         </div>
+  
+        <div class="price">
+          <span>
+            {{ product.price | currency : "EUR" }}
+          </span>
+          <button class="add-btn" (click)="addToCart(product)">Buy</button>
+        </div>
       </div>
+    </li>
+  </ul>
+</div>
 
-      <div class="price">
-        <span>
-          {{ product.price | currency : "EUR" }}
-        </span>
-        <button class="add-btn" (click)="addToCart(product)">
-          Buy
-        </button>
-      </div>
-    </div>
-  </li>
-</ul>
