--- a/frontend/src/app/components/partials/tags/tags.component.css
+++ b/frontend/src/app/components/partials/tags/tags.component.css
@@ -1,14 +1,6 @@
-div{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+mat-expansion-panel {
+  width: 250px;
 }
 
-div a{
-  background-color: #f0f0f0;
-  padding: 0.3rem 1rem;
-  margin: 0.2rem 0.15rem;
-  border-radius: 10rem;
-  font-weight: 600;
-  color: rgb(14, 141, 186);
-}
+
+
