--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,10 +10,13 @@
 html{
   font-size:16px;
   margin-top: 100px;
+  background-color: #fcfcfc;
+
 }
 
 body{
   margin: 0;
+  background-color: #fcfcfc;
 }
 
 a{
