--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.html
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.html
@@ -57,7 +57,7 @@
           value="{{ user.phone }}"
         ></app-text-input>
 
-        <app-button [widthRem]="15" text="Save Changes" (click)="saveChanges()"
+        <app-button [widthRem]="15"  [text]="'Save Changes'" (click)="saveChanges()"
           >Save Changes</app-button
         >
       </div>
