--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -15,7 +15,7 @@
             </div>
           </a>
           <div class="menu">
-            <a routerLink="/edit-account">Profile</a>
+            <a routerLink="/account">Profile</a>
             <a routerLink="/orders">Orders</a>
             <a (click)="logout()">Logout</a>
           </div>
