--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,54 +1,55 @@
 <div class="wrapper">
-<app-title title="{{user.name}}'s Cart" margin="1.5rem 0 0 2.5rem" />
-<app-not-found
-  [visible]="!cart || !cart.items.length"
-  notFoundMessage="Your Cart is empty."
-  resetLinkText="Back to Store"
- />
+  <app-title title="{{ user.name }}'s Cart" />
+  <app-not-found
+    [visible]="!cart || !cart.items.length"
+    notFoundMessage="Your Cart is empty."
+    resetLinkText="Back to Store"
+  />
+  <div *ngIf="cart && cart.items.length" class="container">
+    <ul>
+      <li *ngFor="let cartItem of cart.items">
+        <div routerLink="/product/{{ cartItem.product.id }}">
+          <img
+            [src]="cartItem.product.imageUrl"
+            [alt]="cartItem.product.name"
+          />
+        </div>
+        <div>
+          <a routerLink="/product/{{ cartItem.product.id }}">
+            {{ cartItem.product.name }}
+          </a>
+        </div>
+        <div>
+          <select
+            #quantitySelect
+            [value]="cartItem.quantity"
+            (change)="changeQuantity(cartItem, quantitySelect.value)"
+          >
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </div>
+        <div>
+          {{ cartItem.price | currency : "EUR" }}
+        </div>
 
-
-</div>
-<div *ngIf="cart && cart.items.length" class="container">
-  <ul>
-    <li *ngFor="let cartItem of cart.items">
-      <div routerLink="/product/{{ cartItem.product.id }}">
-        <img [src]="cartItem.product.imageUrl" [alt]="cartItem.product.name" />
-      </div>
+        <div>
+          <button class="remove-button" (click)="removeFromCart(cartItem)">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
+        </div>
+      </li>
+    </ul>
+    <div class="checkout">
       <div>
-        <a routerLink="/product/{{ cartItem.product.id }}">
-          {{ cartItem.product.name }}
-        </a>
-      </div>
-      <div>
-        <select
-          #quantitySelect
-          [value]="cartItem.quantity"
-          (change)="changeQuantity(cartItem, quantitySelect.value)"
-        >
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </div>
-      <div>
-        {{ cartItem.price | currency : "EUR" }}
+        <div class="products-count">{{ cart.totalCount }}</div>
+        <div class="total-price">{{ cart.totalPrice | currency : "EUR" }}</div>
       </div>
 
-      <div>
-        <button class="remove-button" (click)="removeFromCart(cartItem)">
-          <mat-icon>delete_forever</mat-icon>
-        </button>
-      </div>
-    </li>
-  </ul>
-  <div class="checkout">
-    <div>
-      <div class="products-count">{{ cart.totalCount }}</div>
-      <div class="total-price">{{ cart.totalPrice | currency : "EUR" }}</div>
+      <a routerLink="/checkout">Proceed to Checkout</a>
     </div>
-
-    <a routerLink="/checkout">Proceed to Checkout</a>
   </div>
 </div>
