--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
@@ -21,6 +21,8 @@ img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
+    box-shadow: 0 0 8px rgb(185, 185, 185);
+    border: 2px solid #e5e5e5;
     object-fit: cover;
 }
 
@@ -64,8 +66,6 @@ input {
 .icon:hover {
  opacity: 0.8;
 }
-
-
 
 .file-input-container {
     width: 100px;
