--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -14,9 +14,8 @@
   }
 
 ul{
-    height: 100%;
+    height: 80vh;
     width: 1100px;
-  
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -140,3 +139,24 @@ ul{
     opacity: 0.8;
   }
 
+
+  @media screen and (max-width: 1400px) {
+  
+    .aside {
+      width: 1100px;
+      box-shadow: none;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 3rem;
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+  
+    .aside {
+      flex-direction: column;
+      align-items: center;
+      gap: 0;
+    }
+  }
