--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -54,8 +54,6 @@ header{
     display: inline-block;
   }
 
-
-
   .dashboard {
     width: 100%;
     height: 100%;
@@ -73,6 +71,8 @@ header{
     width: 30px;
     object-fit: cover;
     border-radius: 50%;
+    box-shadow: 0 0 2px rgb(185, 185, 185);
+    border: 1px solid #e5e5e5;
   }
 
   .custom-icon {
