--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
@@ -3,7 +3,6 @@ app-title {
     text-align: center;
 }
 
-
 .form {
     margin: 0px auto;
     display: flex;
@@ -99,7 +98,9 @@ input {
     margin-right: 8px; 
   }
 
+  
   .delete-account-container a {
+    height: 50px;
     font-size: 14px;
     color: gray;
     text-decoration: underline;
