--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.html
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.html
@@ -1,7 +1,7 @@
 <div>
   <app-title title="Edit Profile" margin="0 auto" />
 
-  <div>
+  <div class="wrapper">
     <form class="form" [formGroup]="editAccountForm">
       <div class="image-container">
         <img
