--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -18,7 +18,7 @@
         <div class="content">
           <a routerLink="/product/{{ product.id }}" class="name">
             <span>
-              {{ product.id }}
+              {{ product.name }}
             </span>
           </a>
 
