--- a/frontend/src/app/components/pages/register-page/register-page.component.html
+++ b/frontend/src/app/components/pages/register-page/register-page.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-partical-background />
   <div class="details">
     <app-title title="Register"></app-title>
     <form [formGroup]="registerForm" (ngSubmit)="submit()">
