--- a/frontend/src/app/components/pages/login-page/login-page.component.css
+++ b/frontend/src/app/components/pages/login-page/login-page.component.css
@@ -1,19 +1,38 @@
+app-partial-background{
+    z-index: -1;
+}
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+    
+   
     margin-top: 3rem;
 }
 
 .details {
-    width: 28rem;
+    width: 25rem;
+    height: 30rem;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.747);
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 form {
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+app-button {
+    margin-top: 1rem;
 }
 
 .register{
