--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-partical-background />
   <div class="details">
     <app-title title="Login"></app-title>
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
@@ -27,3 +28,5 @@
     </form>
   </div>
 </div>
+
+
