--- a/frontend/src/app/components/pages/register-page/register-page.component.css
+++ b/frontend/src/app/components/pages/register-page/register-page.component.css
@@ -3,12 +3,21 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-top: 3rem;
+    margin-top: 1.5rem;
   }
   
-  .details{
+  .details {
     width: 25rem;
-  }
+    height: 37rem;
+    padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.747);
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
   
   .login{
     display: flex;
