--- a/frontend/src/app/components/partials/partical-background/partical-background.component.html
+++ b/frontend/src/app/components/partials/partical-background/partical-background.component.html
@@ -1,7 +1,8 @@
-<!-- <ng-particles
+ <ng-particles
     [id]="id"
     [options]="particlesOptions"
     [particlesInit]="particlesInit"
     (particlesLoaded)="particlesLoaded($event)"
-></ng-particles> -->
+></ng-particles> 
 
+<!---->
