--- a/frontend/src/app/components/partials/button/button.component.html
+++ b/frontend/src/app/components/partials/button/button.component.html
@@ -7,6 +7,7 @@
        'width.rem':widthRem
      }"
      [type]="type"
+     [disabled]= "disabled"
      (click)="onClick.emit()"
      >
      {{text}}
