--- a/frontend/src/app/components/partials/button/button.component.css
+++ b/frontend/src/app/components/partials/button/button.component.css
@@ -13,9 +13,10 @@
     width: 100%;
     margin: 1rem auto;
     opacity: 0.8;
+    color: gray;
   }
   
-  button:hover{
+  button:not(:disabled):hover{
   cursor: pointer;
   opacity: 1;
   }
