--- a/frontend/src/app/components/partials/input-container/input-container.component.html
+++ b/frontend/src/app/components/partials/input-container/input-container.component.html
@@ -1,4 +1,4 @@
-<div class="container" [ngStyle]="{'background-color': bgColor} ">
+<div class="container" [ngStyle]="{'background-color': bgColor, 'border': border} ">
     <label>
       {{label}}
     </label>
