--- a/frontend/src/app/components/partials/text-input/text-input.component.html
+++ b/frontend/src/app/components/partials/text-input/text-input.component.html
@@ -1,4 +1,4 @@
-<app-input-container [label]="label">
+<app-input-container [label]="label" [border]="border" >
   <input
     [type]="type"
     [value]="value"
